6174 Refactor BulkImportJobDriverIT